demo-enterprise/deployments/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-enterprise
  labels:
    app: demo-enterprise
spec:
  selector:
    app: demo-enterprise
  ports:
  - name: http
    port: 80
    targetPort: 8080
    protocol: TCP
  type: ClusterIP
